add experience component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="header">
-<span>Home</span>
-<span>Resume</span>
-<span>Portfolio</span>
-<span>Blog</span>
+  <a>Home</a>
+  <a>Resume</a>
+  <a>Portfolio</a>
+  <a>Blog</a>
 </div>
 <router-outlet></router-outlet>
