--- a/src/app/home/experience/experience.component.html
+++ b/src/app/home/experience/experience.component.html
@@ -5,5 +5,6 @@
         <div class="progress-bar">
             <div class="progress" class="progress" [ngStyle]="{'width': datePercentage(technology)}"></div>
         </div>
+        <span>Since {{ getStartDate(technology) }}</span>
     </div>
 </div>
