add images to project boxes

--- a/src/app/home/experience/experience.component.scss
+++ b/src/app/home/experience/experience.component.scss
@@ -10,7 +10,7 @@
             flex-grow: 1;
             flex-basis: 50%;
             div.progress-bar{ 
-                background-color: black;
+                background-color: #1d1d1d;
                 margin: 20px;
                 border-radius: 3px;
                 >div.progress {
