--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -1,3 +1,19 @@
-<p>
-  projects works!
-</p>
+<loading *ngIf="loading"></loading>
+<div *ngIf="!loading">
+    <div class="animated project fadeIn" [ngStyle]="{'animation-delay': i*125 +'ms'}" *ngFor="let project of projects; let i = index">
+        <img [src]="'../../../assets/images/' + project.image" [alt]="project.name + ' screenshot'">
+        <h2>{{ project.name }}</h2>
+        <span class="year">{{ project.year }}</span>
+        <div class="tools">
+            <span class="tool" *ngFor="let tool of project.tools">
+              {{ tool }}
+            </span>
+          </div>
+        <p>{{ project.description }}</p>
+        <div class="roles">
+          <span class="role" *ngFor="let role of project.role">
+            {{ role}}
+          </span>
+        </div>
+    </div>
+</div>
