--- a/src/app/home/projects/projects.component.scss
+++ b/src/app/home/projects/projects.component.scss
@@ -22,6 +22,7 @@
             }
             img {
                 width: 100%;
+                cursor: pointer;
             }
             span.year {
                 display: flex;
