--- a/src/app/home/experience/experience.component.scss
+++ b/src/app/home/experience/experience.component.scss
@@ -16,6 +16,7 @@
                 >div.progress {
                     background-color: $primary;
                     height: 7px;
+                    width: 0px;
                     border-radius: 3px;
                 }
             }
