--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,23 @@
-<p>
-  home works!
-</p>
+<div class="background" >
+    <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+    </ul>
+</div>
+<section class="hero">
+  <h1>
+    I'm Charles Barnes
+  </h1>
+  <h2>I would be happy to help with any HTML5/CSS/Javascript ideas. If you would like to get one started, please reach out.</h2>
+
+</section>
 <app-experience></app-experience>
 <app-projects></app-projects>
