--- a/src/app/home/projects/projects.component.scss
+++ b/src/app/home/projects/projects.component.scss
@@ -15,10 +15,9 @@
             text-align: center;
             h2 {
                 margin-bottom: 5px;
-                font-size: 1.8vw;
             }
             p {
-                font-size: 1.1vw;
+                //font-size: 1.1vw;
             }
             img {
                 width: 100%;
