style landing page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 :host {
     div.header {
-        display: flex;
+        display: none;
         justify-content: flex-end;
         margin-right: 30px;
         a {
