--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,20 @@
-<div class="background" >
-    <ul class="circles">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-    </ul>
-</div>
-<section class="hero">
+<section class="hero animated">
   <h1>
-    I'm Charles Barnes
+    I'm <span>Charles Barnes</span>
   </h1>
-  <h2>I would be happy to help with any HTML5/CSS/Javascript ideas. If you would like to get one started, please reach out.</h2>
+  <h2>Fullstack Developer. Frontend Guru. Open Source Advocate.</h2>
 
 </section>
+<div class="background" >
+    <ul class="circles">
+      <li *ngFor="let li of liCount"></li>
+    </ul>
+</div>
+<div class="scroll-indicator animated bounce infinite delay-5s">
+ <i></i>
+ <i></i>
+</div>
+
+
 <app-experience></app-experience>
 <app-projects></app-projects>
