--- a/src/app/home/projects/projects.component.scss
+++ b/src/app/home/projects/projects.component.scss
@@ -58,6 +58,10 @@
                     }
                 }
             }
+            span.users {
+                color: #1694c5;
+                font-weight: 700;
+            }
         }
     }
 }
