--- a/src/app/home/experience/experience.component.scss
+++ b/src/app/home/experience/experience.component.scss
@@ -1,6 +1,7 @@
 @import '../../../variables.scss';
 :host {
     >div {
+        margin-top: 10vh;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
