--- a/src/app/home/projects/projects.component.scss
+++ b/src/app/home/projects/projects.component.scss
@@ -2,17 +2,24 @@
     >div {
         display: flex;
         flex-wrap: wrap;
+        background-color: #F4F4F4;
+        margin-top: 100px;
+        h1 {
+            width: 100%;
+            color: #1694c5;
+            text-align: center;
+        }
         div.project {
             flex-basis: 25%;
             flex-grow: 1;
             margin: 30px;
-            //background-color: #1d1d1d;
-            padding: 20px;
-            box-shadow: 0 0 8px 0 rgba(0,0,0,.1);
+            padding-bottom: 20px;
+            box-shadow: 0 0 8px 0 rgba(0,0,0,.25);
             border-radius: 0.4em;
             position: relative;
             overflow-x: hidden;
             text-align: center;
+            background-color: #181818;
             h2 {
                 margin-bottom: 5px;
             }
@@ -24,7 +31,7 @@
                 cursor: pointer;
             }
             span.year {
-                display: flex;
+                display: none;
                 &:after,
                 &:before {
                     top: 51%;
