--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -1,19 +1,28 @@
 <loading *ngIf="loading"></loading>
 <div *ngIf="!loading">
   <h1>Projects</h1>
-    <div class="animated project fadeIn" [ngStyle]="{'animation-delay': i*125 +'ms'}" *ngFor="let project of projects; let i = index">
-        <img [src]="'../../../assets/images/' + project.image" [alt]="project.name + ' screenshot'" (click)="openModal(project)">
-        <h2>{{ project.name }}</h2>
-        <span class="year">{{ project.year }}</span>
-        <div class="tools">
-            <span class="tool" *ngFor="let tool of project.tools">
-              {{ tool }}
-            </span>
+    <div (click)="openModal(project)" class="animated project fadeIn" [ngStyle]="{'animation-delay': i*125 +'ms'}" *ngFor="let project of projects; let i = index">
+        <img [src]="'../../../assets/images/' + project.image" [alt]="project.name + ' screenshot'" >
+        <div class="information animated fadeIn">
+          <div class="text-container">
+            <div class="tech">
+              <h2 class="animated fadeInDown">{{ project.name }}</h2>
+              <span class="year">{{ project.year }}</span>
+              <div class="tools">
+                <span class="tool animated fadeInDown" [ngStyle]="{'animation-delay': in*125 +'ms'}" *ngFor="let tool of project.tools; let in = index">
+                  {{ tool }}
+                </span>
+              </div>
+            </div>
+            <div class="description animated fadeInUp">
+              <p>{{ project.description }}</p>
+              <span class="users animated heartBeat delay-2s" *ngIf="project.users">
+                {{ project.users }}
+              </span>
+            </div>
           </div>
-        <p>{{ project.description }}</p>
-        <span class="users" *ngIf="project.users">
-          {{ project.users }}
-        </span>
+        </div>
+
     </div>
 </div>
 
