--- a/src/app/home/experience/experience.component.scss
+++ b/src/app/home/experience/experience.component.scss
@@ -1,5 +1,8 @@
 @import '../../../variables.scss';
 :host {
+    h1 {
+        text-align: center;
+    }
     div.personal {
         margin-top: 10vh;
         display: flex;
@@ -7,7 +10,28 @@
         justify-content: space-around;
         .details {
             flex-basis: 35%;
-
+            text-align: center;
+            .headshot {
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                margin-bottom: 10px;
+                img {
+                    width: 128px;
+                    height: 128px;
+                    border-radius: 50%;
+                }
+            }
+            .icons {
+                display: flex;
+                justify-content: center;
+                .icon {
+                    fill: #1694c5;
+                    &:hover {
+                        fill: lighten( #1694c5, $amount: 20)
+                    }
+                }
+            }
         }
     }
     div.personal > div.technologies {
@@ -15,12 +39,37 @@
         flex-direction: row;
         flex-wrap: wrap;
         flex-basis: 55%;
-        
+        position: relative;
+        div.indicator {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            width: 100%;
+            display: inline-block;
+            flex-basis: 100%;
+            position: absolute;
+            top: 0px;
+            z-index: -1;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            >div {
+                border-right: 1px dashed #f4f4f452;
+                height: 100%;
+                width: 3px;
+                display: flex;
+                align-items: flex-end;
+                span {
+                    transform: rotate(30deg) translateY(20px) translateX(15px);
+                }
+            }
+        }
         >div.technology {
             display: flex;
             flex-direction: column;
             flex-grow: 1;
-            flex-basis: 50%;
+            flex-basis: 100%;
             div.progress-bar{ 
                 background-color: #1d1d1d;
                 margin: 20px;
@@ -30,9 +79,24 @@
                     height: 7px;
                     width: 0px;
                     border-radius: 3px;
+                    animation: slide 1s linear;
                 }
             }
         }
+    }
+
+
+}
+
+
+@keyframes slide {
+
+    0%{
+        width: 0;
+    }
+
+    100%{
+        width: var(width, 100%);
     }
 
 
