--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -27,10 +27,10 @@
             border: solid #f4f4f4;
             border-width: 0 5px 5px 0;
             display: inline-block;
-            padding: 20px;
+            padding: 2vh;
             transform: rotate(45deg);
             &:nth-child(2) {
-                transform: rotate(45deg) translateY(-20px) translateX(-20px);
+                transform: rotate(45deg) translateY(-2vh) translateX(-2vh);
             }
         }
           
