--- a/src/app/home/projects/projects.component.scss
+++ b/src/app/home/projects/projects.component.scss
@@ -11,11 +11,8 @@
         }
         div.project {
             flex-basis: 25%;
-            @media only screen and (max-width: 600px) {
+            @media only screen and (max-width: 1000px) {
                 flex-basis: 100%;
-            }
-            @media only screen and (min-width: 600px) and (max-width: 1000px) {
-                flex-basis: 40%;
             }
             flex-grow: 1;
             margin: 2vw;
@@ -34,10 +31,10 @@
             }
             h2 {
                 margin-bottom: 5px;
-                font-size: 2vw;
+                font-size: 1.5em;
             }
             p {
-                font-size: 1.1vw;
+                font-size: 1.1em;
             }
             img {
                 width: 100%;
@@ -65,9 +62,9 @@
                 flex-wrap: wrap;
                 justify-content: center;
                 span {
-                    padding: .4vw;
-                    margin: 1vw;
-                    font-size: .8vw;
+                    padding: .3vw;
+                    margin: .6vw;
+                    font-size: .8em;
                     align-self: center;
                     &.tool {
                         background-color: #1694c5;
